--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.25</version>
 		</dependency>
+
+		<!--marshalling-->
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>2.0.0.Beta2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
